# openmetadata-lab

./: .pre-commit-config.yaml  .yamllint  README.md
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
openmetadata-data-consumer-setup/: .gitignore  README.md  package.json  pyproject.toml  requirements.txt
openmetadata-data-consumer-setup/src/config/: persona.yaml  role.yaml  uiCustomization.yaml  widget.yaml
openmetadata-data-consumer-setup/src/scripts/: addWidgetToUI.py  createDataConsumerRole.py  createPersona.py  createUICustomization.py
openmetadata-data-consumer-setup/src/types/: index.ts
openmetadata-data-consumer-setup/src/ui/: index.tsx
openmetadata-data-consumer-setup/src/ui/styles/: DataProductsWidget.css
openmetadata-data-consumer-setup/src/ui/widgets/: DataProductsWidget.tsx
openmetadata-data-consumer-setup/tests/: test_config_parsing.py
scripts/: apply.sh
